release 1.31